Customiza bootstrap vaiablres

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
-<div class="jumbotron">
-	<h1>Welcome to Pinteresting</h1>
-	<p>Click here to <%= link_to "Sign up", "#", class: "btn btn-lg btn-primary" %>.</p>
+<div class="jumbotron center">
+		<h1>Welcome to Pinteresting!</h1>
+		<%= link_to "Log in", "#", class: "btn btn-lg btn-default" %>
+		<%= link_to "Sign up", "#", class: "btn btn-lg btn-primary" %>
 </div>
