Changes to application.js to fix bootstrap

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -8,6 +8,7 @@ $navbar-default-brand-color: 	#c0392b;
 $brand-primary: 				#c0392b;
 $jumbotron-bg: 					white;
 
+// "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
 @import "bootstrap-sprockets";
 @import 'bootstrap';
 
