--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,11 @@
 <div class="jumbotron center">
-		<h1>Welcome to Pinteresting!</h1>
-		<%= link_to "Log in", "#", class: "btn btn-lg btn-default" %>
-		<%= link_to "Sign up", "#", class: "btn btn-lg btn-primary" %>
+	<h1>Welcome to Pinteresting!</h1>
+	<% if user_signed_in? %>
+		#do something
+	<% else %>
+		<p>
+			<%= link_to "Log in", new_user_session_path, class: "btn btn-lg btn-default" %>
+			<%= link_to "Sign up", new_user_registration_path, class: "btn btn-lg btn-primary" %>
+		</p>
+	<% end %>
 </div>
